# ScrapingLab

./: .gitignore  pyproject.toml
.github/workflows/: code-test.yml
src/scrapinglab/: __init__.py  extension_1.py  extension_2.py  main.py
src/scrapinglab/extensions/: __init__.py  add_remove_elements.py  base_extension.py  basic_auth.py  broken_images.py  challenging_dom.py  checkboxes.py  context_menu.py  digest_auth.py  disappearing_elements.py  drag_and_drop.py  dropdown.py  dynamic_content.py  dynamic_controls.py  entry_ad.py  exit_intent.py  file_downloader.py  file_uploader.py  floating_menu.py  forgot_password.py  frames.py  geo_location.py  horizontal_slider.py  hovers.py  infinite_scrolling.py  inputs.py  js_alerts.py  js_error.py  notifications.py  redirector.py  shadow_dom.py  slow_resources.py  split_testing.py  status_codes.py  tables.py  tinymce.py
src/scrapinglab/extensions/core/: base_extension.py
src/scrapinglab/extensions/frame/: base_frame.py  frame_handler.py  iframe.py  nested_frames.py
src/scrapinglab/extensions/hudson_rock/: __init__.py  main.py
src/scrapinglab/extensions/jquery_module/: __init__.py  jquery_ui_menu.py
src/scrapinglab/extensions/secure_file_download/: __init__.py  secure_file_download.py
src/scrapinglab/extensions/shifting_content/: __init__.py  shifting_content.py  shifting_image.py  shifting_menu.py  shifting_page.py  shifting_record.py
tests/unit/: conftest.py  test_extensions.py  test_extensions_pkg.py  test_packages.py
tests/unit/helper/: __init__.py  provider.py
