[project]
name = "scrapinglab"
version = "0.1.0"
description = "Lab for learning web scraping with python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.59.0",
]

[project.scripts]
start-scrape = "scrapinglab.main:main"

[tool.uv]
package = true

[tool.uv.sources]
toolbox = { path = "../ToolBox" }

[dependency-groups]
dev = [
    "toolbox",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrapinglab"]
