[project]
name = "scrapinglab"
version = "0.1.0"
description = "Lab for learning web scraping with python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "humancursor>=1.1.5",
    "oxymouse>=1.1.0",
    "playwright>=1.59.0",
    "pydantic>=2.13.4",
]

[project.scripts]
start-scrape = "scrapinglab.main:main"

[tool.uv]
package = true

[tool.uv.sources]
toolbox = { git = "https://github.com/Mount2003/ToolBox.git" }

[dependency-groups]
dev = [
    "toolbox",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrapinglab"]
