[project]
name = "scrapinglab"
version = "0.1.0"
description = "Lab for learning web scraping with python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "oxymouse>=1.1.0",
    "playwright>=1.59.0",
    "pydantic>=2.13.4",
]

[project.scripts]
start-scrape = "scrapinglab.main:main"

[tool.uv]
package = true

[tool.uv.sources]
toolbox = { git = "https://github.com/mount-automation/ToolBox" }

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "toolbox",
    "validators>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrapinglab"]
